2018年8月保守リリース対応 No.404_DBサーバ リソース情報取得対応
git-svn-id: http://10.16.14.243:13000/svn/azbBatch@152 2364f4dd-7815-ee4c-b9ea-42ae821c1292

--- a/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_DB.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 不要ファイル削除定義 ( Version 1.11 : 2017/02/01 : Update ISID-IT K.Doi )
+# 不要ファイル削除定義 ( Version 1.12 : 2018/07/06 : Update ISID-IT K.Takeichi )
 #-----------------------------------------------------------------------------------------------------------------------
 # DELETE_LOG_DEF.cfg  (DBサーバ用)
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
@@ -77,3 +77,7 @@ F,${UNYO_DB_EXTRCV_DIR}\backup,W_*.dat.*,10
 F,${UNYO_DB_EXTRCV_DIR}\backup,D_*.dat.*,10
 # 日次送信ファイル 10日保管
 F,${UNYO_DB_EXTSND_DIR}\backup,S_*.dat.*,10
+#-----------------------------------------------------------------------------------------------------------------------
+# パフォーマンス情報ログ削除
+#-----------------------------------------------------------------------------------------------------------------------
+F,D:\logfile\performance,performance_*.csv,30
