--- a/trunk/unyo/shell/def/ForShinaDev/DELETE_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForShinaDev/DELETE_LOG_DEF_DB.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 不要ファイル削除定義 ( Version 1.0 : 2016/01/15 : Update ISID-IT K.Doi )
+# 不要ファイル削除定義 ( Version 1.1 : 2018/07/06 : Update ISID-IT K.Takeichi )
 #-----------------------------------------------------------------------------------------------------------------------
 # DELETE_LOG_DEF.cfg  (社内DBサーバ用)
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
@@ -63,3 +63,7 @@ F,${UNYO_DB_EXTRCV_DIR}\backup,W_*.dat.*,10
 F,${UNYO_DB_EXTRCV_DIR}\backup,D_*.dat.*,10
 # 日次送信ファイル 10日保管
 F,${UNYO_DB_EXTSND_DIR}\backup,S_*.dat.*,10
+#-----------------------------------------------------------------------------------------------------------------------
+# パフォーマンス情報ログ削除
+#-----------------------------------------------------------------------------------------------------------------------
+F,D:\logfile\performance,performance_*.csv,30
