2020年9月 顧客受付ペーパーレスプロジェクト 本人確認資料転送処理追加
git-svn-id: http://10.16.14.243:13000/svn/azbBatch@158 2364f4dd-7815-ee4c-b9ea-42ae821c1292

--- a/trunk/unyo/shell/def/ForMaster/fccplsap/DELETE_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForMaster/fccplsap/DELETE_LOG_DEF_AP.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 不要ファイル削除定義( Version 1.0 : 2020/06/11 : Update ISID A.MIYAMOTO )
+# 不要ファイル削除定義( Version 1.1 : 2020/08/18 : Update ISID A.MIYAMOTO )
 #-----------------------------------------------------------------------------------------------------------------------
 # DELETE_LOG_DEF.cfg  (受付APサーバ用)
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
@@ -54,6 +54,9 @@ F,D:\unyolog\@@SVRNL@@\audit\was\brtabazb,SystemOut_tr_*.log,30
 F,D:\unyolog\@@SVRNL@@\audit\was\brtabazb,SystemErr_tr_*.log,30
 #-------------------------
 F,D:\logfile\unyo\azbk\actlog,*.ps1.log.*,10
+#-------------------------
+D,D:\BANKR_CC\image\brtabazb\reference,??????,0
+D,D:\BANKR_CC\image\brtabtrn\reference,??????,0
 #-----------------------------------------------------------------------------------------------------------------------
 # NAS保管
 #-----------------------------------------------------------------------------------------------------------------------
@@ -94,3 +97,6 @@ F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\brtabtrn,trace_tr.log.????????,36
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\brtabtrn,activity_tr.log.????????,3650
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\brtabtrn,SystemOut_tr_*.log,3650
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\brtabtrn,SystemErr_tr_*.log,3650
+#-------------------------
+D,${COM_NAS_BASE_DIRS}\Image\brtabazb,??????,3650
+D,${COM_NAS_BASE_DIRS}\Image\brtabtrn,??????,3650
