--- a/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_AP.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 不要ファイル削除定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
+# 不要ファイル削除定義 ( Version 1.0 : 2020/08/24 : Update ISID A.MIYAMOTO )
 #-----------------------------------------------------------------------------------------------------------------------
 # DELETE_LOG_DEF.cfg  (APサーバ用)
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
@@ -105,6 +105,9 @@ F,D:\logfile\unyo\azbk\actlog,*.ps1.log.*,10
 #F,D:\logfile\WAS\brccazbk,SystemErr_*.log,30
 #F,D:\logfile\WAS\brcctrng,SystemOut_tr_*.log,30
 #F,D:\logfile\WAS\brcctrng,SystemErr_tr_*.log,30
+#-------------------------
+D,D:\BANKR_CC\image\brtabazb\reference,??????,0
+D,D:\BANKR_CC\image\brtabtrn\reference,??????,0
 #-----------------------------------------------------------------------------------------------------------------------
 # NAS保管
 #-----------------------------------------------------------------------------------------------------------------------
