障害管理No.002本人確認資料保管参照対応
git-svn-id: http://10.16.14.243:13000/svn/azbBatch@163 2364f4dd-7815-ee4c-b9ea-42ae821c1292

--- a/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_AP.cfg
@@ -106,8 +106,8 @@ F,D:\logfile\unyo\azbk\actlog,*.ps1.log.*,10
 #F,D:\logfile\WAS\brcctrng,SystemOut_tr_*.log,30
 #F,D:\logfile\WAS\brcctrng,SystemErr_tr_*.log,30
 #-------------------------
-D,D:\BANKR_CC\image\brtabazb\reference,??????,0
-D,D:\BANKR_CC\image\brtabtrn\reference,??????,0
+F,D:\BANKR_CC\image\brtabazb\reference,*.*,0
+F,D:\BANKR_CC\image\brtabtrn\reference,*.*,0
 #-----------------------------------------------------------------------------------------------------------------------
 # NAS•ÛŠÇ
 #-----------------------------------------------------------------------------------------------------------------------
