--- a/trunk/unyo/shell/def/ForMaster/fccplsap/DELETE_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForMaster/fccplsap/DELETE_LOG_DEF_AP.cfg
@@ -55,8 +55,8 @@ F,D:\unyolog\@@SVRNL@@\audit\was\brtabazb,SystemErr_tr_*.log,30
 #-------------------------
 F,D:\logfile\unyo\azbk\actlog,*.ps1.log.*,10
 #-------------------------
-D,D:\BANKR_CC\image\brtabazb\reference,??????,0
-D,D:\BANKR_CC\image\brtabtrn\reference,??????,0
+F,D:\BANKR_CC\image\brtabazb\reference,*.*,0
+F,D:\BANKR_CC\image\brtabtrn\reference,*.*,0
 #-----------------------------------------------------------------------------------------------------------------------
 # NAS•ÛŠÇ
 #-----------------------------------------------------------------------------------------------------------------------
