2020年12月 顧客受付ペーパーレスプロジェクト CC開発サーバの本人確認資料転送処理追加 CC開発サーバのログ保管期間を変更
git-svn-id: http://10.16.14.243:13000/svn/azbBatch@170 2364f4dd-7815-ee4c-b9ea-42ae821c1292

--- a/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_AP.cfg
@@ -34,11 +34,11 @@ F,D:\unyolog\@@SVRNL@@\audit\bankr\bankrtrn,eMBPerformanceFile.????????,30
 #F,D:\BANKR_CC\logs\ui\brccazbk,debug.log.????-??-??,30
 #F,D:\BANKR_CC\logs\ui\brccazbk,dump.log.????-??-??,30
 #-------------------------
-F,D:\BANKR_CC\logs\ui\bankrazb,access.log.????-??-??,30
-F,D:\BANKR_CC\logs\ui\bankrazb,error.log.????-??-??,30
-F,D:\BANKR_CC\logs\ui\bankrazb,heap.log.????-??-??,30
-F,D:\BANKR_CC\logs\ui\bankrazb,debug.log.????-??-??,30
-F,D:\BANKR_CC\logs\ui\bankrazb,dump.log.????-??-??,30
+F,D:\BANKR_CC\logs\ui\bankrazb,access.log.????-??-??,1
+F,D:\BANKR_CC\logs\ui\bankrazb,error.log.????-??-??,1
+F,D:\BANKR_CC\logs\ui\bankrazb,heap.log.????-??-??,1
+F,D:\BANKR_CC\logs\ui\bankrazb,debug.log.????-??-??,1
+F,D:\BANKR_CC\logs\ui\bankrazb,dump.log.????-??-??,1
 #-------------------------
 #F,D:\BANKR_CC\logs\ui\brcctrng,access.log.????-??-??,30
 #F,D:\BANKR_CC\logs\ui\brcctrng,error.log.????-??-??,30
@@ -46,11 +46,11 @@ F,D:\BANKR_CC\logs\ui\bankrazb,dump.log.????-??-??,30
 #F,D:\BANKR_CC\logs\ui\brcctrng,debug.log.????-??-??,30
 #F,D:\BANKR_CC\logs\ui\brcctrng,dump.log.????-??-??,30
 #-------------------------
-F,D:\BANKR_CC\logs\ui\bankrtrn,access.log.????-??-??,30
-F,D:\BANKR_CC\logs\ui\bankrtrn,error.log.????-??-??,30
-F,D:\BANKR_CC\logs\ui\bankrtrn,heap.log.????-??-??,30
-F,D:\BANKR_CC\logs\ui\bankrtrn,debug.log.????-??-??,30
-F,D:\BANKR_CC\logs\ui\bankrtrn,dump.log.????-??-??,30
+F,D:\BANKR_CC\logs\ui\bankrtrn,access.log.????-??-??,1
+F,D:\BANKR_CC\logs\ui\bankrtrn,error.log.????-??-??,1
+F,D:\BANKR_CC\logs\ui\bankrtrn,heap.log.????-??-??,1
+F,D:\BANKR_CC\logs\ui\bankrtrn,debug.log.????-??-??,1
+F,D:\BANKR_CC\logs\ui\bankrtrn,dump.log.????-??-??,1
 #-------------------------
 #F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,access.log.????????,30
 #F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,error.log.????????,30
@@ -58,11 +58,11 @@ F,D:\BANKR_CC\logs\ui\bankrtrn,dump.log.????-??-??,30
 #F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,debug.log.????????,30
 #F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,dump.log.????????,30
 #-------------------------
-F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,access.log.????????,30
-F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,error.log.????????,30
-F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,heap.log.*,30
-F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,debug.log.????????,30
-F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,dump.log.????????,30
+F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,access.log.????????,7
+F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,error.log.????????,7
+F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,heap.log.*,7
+F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,debug.log.????????,7
+F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,dump.log.????????,7
 #-------------------------
 #F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,access.log.????????,30
 #F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,error.log.????????,30
@@ -70,11 +70,11 @@ F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,dump.log.????????,30
 #F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,debug.log.????????,30
 #F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,dump.log.????????,30
 #-------------------------
-F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,access.log.????????,30
-F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,error.log.????????,30
-F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,heap.log.*,30
-F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,debug.log.????????,30
-F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,dump.log.????????,30
+F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,access.log.????????,7
+F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,error.log.????????,7
+F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,heap.log.*,7
+F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,debug.log.????????,7
+F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,dump.log.????????,7
 #-------------------------
 #F,D:\unyolog\@@SVRNL@@\audit\was\azbk,trace.log.????????,30
 #F,D:\unyolog\@@SVRNL@@\audit\was\azbk,activity.log.????????,30
@@ -105,6 +105,7 @@ F,D:\logfile\unyo\azbk\actlog,*.ps1.log.*,10
 #F,D:\logfile\WAS\brccazbk,SystemErr_*.log,30
 #F,D:\logfile\WAS\brcctrng,SystemOut_tr_*.log,30
 #F,D:\logfile\WAS\brcctrng,SystemErr_tr_*.log,30
+F,D:\BANKR_CC\image\brtabazb\reference,*.*,0
 #-----------------------------------------------------------------------------------------------------------------------
 # NAS•ÛŠÇ
 #-----------------------------------------------------------------------------------------------------------------------
