追加対応分 ログ削除定義を修正
git-svn-id: http://10.16.14.243:13000/svn/azbBatch@177 2364f4dd-7815-ee4c-b9ea-42ae821c1292

--- a/trunk/unyo/shell/def/ForMaster/fccplsap/DELETE_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForMaster/fccplsap/DELETE_LOG_DEF_AP.cfg
@@ -48,10 +48,10 @@ F,D:\unyolog\@@SVRNL@@\audit\was\brtabazb,activity.log.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\was\brtabazb,SystemOut_*.log,30
 F,D:\unyolog\@@SVRNL@@\audit\was\brtabazb,SystemErr_*.log,30
 #-------------------------
-F,D:\unyolog\@@SVRNL@@\audit\was\brtabazb,trace_tr.log.????????,30
-F,D:\unyolog\@@SVRNL@@\audit\was\brtabazb,activity_tr.log.????????,30
-F,D:\unyolog\@@SVRNL@@\audit\was\brtabazb,SystemOut_tr_*.log,30
-F,D:\unyolog\@@SVRNL@@\audit\was\brtabazb,SystemErr_tr_*.log,30
+F,D:\unyolog\@@SVRNL@@\audit\was\brtabtrn,trace_tr.log.????????,30
+F,D:\unyolog\@@SVRNL@@\audit\was\brtabtrn,activity_tr.log.????????,30
+F,D:\unyolog\@@SVRNL@@\audit\was\brtabtrn,SystemOut_tr_*.log,30
+F,D:\unyolog\@@SVRNL@@\audit\was\brtabtrn,SystemErr_tr_*.log,30
 #-------------------------
 F,D:\logfile\unyo\azbk\actlog,*.ps1.log.*,10
 #-------------------------
@@ -66,7 +66,7 @@ F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event,event_apl.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\unyo,error.log.????????,90
 #-------------------------
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\brtabazb,access.log.????????,3650
-F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\brtabazb,access.log.????????,3650
+F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\brtabtrn,access.log.????????,3650
 #-------------------------
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\brtabazb,access.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\brtabazb,error.log.????????,90
