202104_音声基盤更改対応 ・CICリブート時のスイッチオーバー処理追加 ・統計サーバログのバックアップ定義修正
git-svn-id: http://10.16.14.243:13000/svn/azbBatch@185 2364f4dd-7815-ee4c-b9ea-42ae821c1292

--- a/trunk/unyo_音声基盤/Deploy/replacefile/fcctbsrppw/shell/def/DELETE_LOG_DEF_RP.cfg
+++ b/trunk/unyo_音声基盤/Deploy/replacefile/fcctbsrppw/shell/def/DELETE_LOG_DEF_RP.cfg
@@ -1,11 +1,20 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 不要ファイル削除定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
+# 不要ファイル削除定義 ( Version 1.0 : 2021/04/21 : Update ISID A.MIYAMOTO )
 #-----------------------------------------------------------------------------------------------------------------------
 # DELETE_LOG_DEF.cfg  (統計サーバ用)
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
 #-----------------------------------------------------------------------------------------------------------------------
 F,D:\logfile\unyo\azbk\actlog,*.ps1.log.*,10
-F,D:\unyolog\@@SVRNL@@\log\cic,IW_SVC_log_????????.txt,30
+#F,D:\unyolog\@@SVRNL@@\log\cic,IW_SVC_log_????????.txt,30
+F,D:\unyolog\@@SVRNL@@\log\cic,ServerAggregateStats-Trace.log.*,30
+F,D:\unyolog\@@SVRNL@@\log\cic,ServerAggregateStats-Error.log.*,30
+F,D:\unyolog\@@SVRNL@@\log\cic,ServerQueue-Trace.log.*,30
+F,D:\unyolog\@@SVRNL@@\log\cic,ServerQueue-Error.log.*,30
+F,D:\unyolog\@@SVRNL@@\log\cic,ServerUser-Trace.log.*,30
+F,D:\unyolog\@@SVRNL@@\log\cic,ServerUser-Error.log.*,30
+F,D:\unyolog\@@SVRNL@@\log\cic,StatisticService-Trace.log.*,30
+F,D:\unyolog\@@SVRNL@@\log\cic,StatisticService-Error.log.*,30
+
 # MSSQL
 F,D:\Product\MICROS~1\PROGRA~1\MICROS~1\MSSQL11.MSSQLSERVER\MSSQL\Log,ERRORLOG.*,30
 F,D:\Product\MICROS~1\PROGRA~1\MICROS~1\MSSQL11.MSSQLSERVER\MSSQL\Log,*.trc,30
@@ -22,7 +31,16 @@ F,D:\unyolog\@@SVRNL@@\log\event,event_apl.log.????????,30
 #-----------------------------------------------------------------------------------------------------------------------
 # NAS保管
 #-----------------------------------------------------------------------------------------------------------------------
-F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,IW_SVC_log_????????.txt,90
+#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,IW_SVC_log_????????.txt,90
+F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerAggregateStats-Trace.log.*,90
+F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerAggregateStats-Error.log.*,90
+F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerQueue-Trace.log.*,90
+F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerQueue-Error.log.*,90
+F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerUser-Trace.log.*,90
+F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerUser-Error.log.*,90
+F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,StatisticService-Trace.log.*,90
+F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,StatisticService-Error.log.*,90
+
 # Event Log
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event,event_sec.log.????????,3650
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event,event_sys.log.????????,90
