--- a/trunk/unyo_音声基盤/Deploy/replacefile/fcctbsrppw/shell/def/BACKUP_OTHER_LOG_DEF_RP.cfg
+++ b/trunk/unyo_音声基盤/Deploy/replacefile/fcctbsrppw/shell/def/BACKUP_OTHER_LOG_DEF_RP.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 各種ログバックアップ定義 ( Version 1.0 : 2017/02/01 : Update ISID R.YAMANO )
+# 各種ログバックアップ定義 ( Version 1.0 : 2021/04/21 : Update ISID A.MIYAMOTO )
 #-----------------------------------------------------------------------------------------------------------------------
 # BACKUP_OTHER_LOG_DEF.cfg (監査ログを除く各種ログ) (統計サーバ用)
 # バックアップ種別,対象区分,対象上位ディレクトリ,対象ディレクトリ/ファイル,保管先ディレクトリ
@@ -8,7 +8,16 @@
 #-----------------------------------------------------------------------------------------------------------------------
 # For NAS Strage
 #-----------------------------------------------------------------------------------------------------------------------
-C,F,D:\IW_CIC\log,IW_SVC_log_@@D0001@@.txt,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
+#C,F,D:\IW_CIC\log,IW_SVC_log_@@D0001@@.txt,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
+C,F,D:\IWCICv5\Server\Logs,ServerAggregateStats-Trace.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
+C,F,D:\IWCICv5\Server\Logs,ServerAggregateStats-Error.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
+C,F,D:\IWCICv5\Server\Logs,ServerQueue-Trace.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
+C,F,D:\IWCICv5\Server\Logs,ServerQueue-Error.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
+C,F,D:\IWCICv5\Server\Logs,ServerUser-Trace.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
+C,F,D:\IWCICv5\Server\Logs,ServerUser-Error.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
+C,F,D:\IWCICv5\Server\Logs,StatisticService-Trace.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
+C,F,D:\IWCICv5\Server\Logs,StatisticService-Error.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
+
 C,F,D:\Product\MICROS~1\PROGRA~1\MICROS~1\MSSQL11.MSSQLSERVER\MSSQL\Log,ERRORLOG.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\MSSQL\@@D0001@@
 C,F,D:\Product\MICROS~1\PROGRA~1\MICROS~1\MSSQL11.MSSQLSERVER\MSSQL\Log,*.trc,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\MSSQL\@@D0001@@
 # Event Log
@@ -28,4 +37,12 @@ C,F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVR
 #M,F,D:\logfile\event,event_apl.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\event\
 M,F,D:\logfile\event,event_sys.log.*,D:\unyolog\@@SVRNL@@\log\event\
 M,F,D:\logfile\event,event_apl.log.*,D:\unyolog\@@SVRNL@@\log\event\
-M,F,D:\IW_CIC\log,IW_SVC_log_@@D0001@@.txt,D:\unyolog\@@SVRNL@@\log\cic
+#M,F,D:\IW_CIC\log,IW_SVC_log_@@D0001@@.txt,D:\unyolog\@@SVRNL@@\log\cic
+M,F,D:\IWCICv5\Server\Logs,ServerAggregateStats-Trace.log.*,D:\unyolog\@@SVRNL@@\log\cic
+M,F,D:\IWCICv5\Server\Logs,ServerAggregateStats-Error.log.*,D:\unyolog\@@SVRNL@@\log\cic
+M,F,D:\IWCICv5\Server\Logs,ServerQueue-Trace.log.*,D:\unyolog\@@SVRNL@@\log\cic
+M,F,D:\IWCICv5\Server\Logs,ServerQueue-Error.log.*,D:\unyolog\@@SVRNL@@\log\cic
+M,F,D:\IWCICv5\Server\Logs,ServerUser-Trace.log.*,D:\unyolog\@@SVRNL@@\log\cic
+M,F,D:\IWCICv5\Server\Logs,ServerUser-Error.log.*,D:\unyolog\@@SVRNL@@\log\cic
+M,F,D:\IWCICv5\Server\Logs,StatisticService-Trace.log.*,D:\unyolog\@@SVRNL@@\log\cic
+M,F,D:\IWCICv5\Server\Logs,StatisticService-Error.log.*,D:\unyolog\@@SVRNL@@\log\cic
