--- a/trunk/unyo_音声基盤/Deploy/replacefile/fcctbsrppw/shell/def/BACKUP_OTHER_LOG_DEF_RP.cfg
+++ b/trunk/unyo_音声基盤/Deploy/replacefile/fcctbsrppw/shell/def/BACKUP_OTHER_LOG_DEF_RP.cfg
@@ -9,17 +9,17 @@
 # For NAS Strage
 #-----------------------------------------------------------------------------------------------------------------------
 #C,F,D:\IW_CIC\log,IW_SVC_log_@@D0001@@.txt,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
-C,F,D:\IWCICv5\Server\Logs,ServerAggregateStats-Trace.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
-C,F,D:\IWCICv5\Server\Logs,ServerAggregateStats-Error.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
-C,F,D:\IWCICv5\Server\Logs,ServerQueue-Trace.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
-C,F,D:\IWCICv5\Server\Logs,ServerQueue-Error.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
-C,F,D:\IWCICv5\Server\Logs,ServerUser-Trace.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
-C,F,D:\IWCICv5\Server\Logs,ServerUser-Error.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
-C,F,D:\IWCICv5\Server\Logs,StatisticService-Trace.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
-C,F,D:\IWCICv5\Server\Logs,StatisticService-Error.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic
+C,F,D:\IW_CIC\logs,ServerAggregateStats-Trace.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic\@@D0001@@
+C,F,D:\IW_CIC\logs,ServerAggregateStats-Error.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic\@@D0001@@
+C,F,D:\IW_CIC\logs,ServerQueue-Trace.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic\@@D0001@@
+C,F,D:\IW_CIC\logs,ServerQueue-Error.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic\@@D0001@@
+C,F,D:\IW_CIC\logs,ServerUser-Trace.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic\@@D0001@@
+C,F,D:\IW_CIC\logs,ServerUser-Error.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic\@@D0001@@
+C,F,D:\IW_CIC\logs,StatisticService-Trace.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic\@@D0001@@
+C,F,D:\IW_CIC\logs,StatisticService-Error.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic\@@D0001@@
 
-C,F,D:\Product\MICROS~1\PROGRA~1\MICROS~1\MSSQL11.MSSQLSERVER\MSSQL\Log,ERRORLOG.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\MSSQL\@@D0001@@
-C,F,D:\Product\MICROS~1\PROGRA~1\MICROS~1\MSSQL11.MSSQLSERVER\MSSQL\Log,*.trc,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\MSSQL\@@D0001@@
+C,F,D:\Product\Microsoft SQL Server\Program Files\Microsoft SQL Server\MSSQL13.MSSQLSERVER\MSSQL\Log,ERRORLOG.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\MSSQL\@@D0001@@
+C,F,D:\Product\Microsoft SQL Server\Program Files\Microsoft SQL Server\MSSQL13.MSSQLSERVER\MSSQL\Log,*.trc,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\MSSQL\@@D0001@@
 # Event Log
 #C,F,D:\logfile\event,event_sys.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
 #C,F,D:\logfile\event,event_apl.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
@@ -38,11 +38,11 @@ C,F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVR
 M,F,D:\logfile\event,event_sys.log.*,D:\unyolog\@@SVRNL@@\log\event\
 M,F,D:\logfile\event,event_apl.log.*,D:\unyolog\@@SVRNL@@\log\event\
 #M,F,D:\IW_CIC\log,IW_SVC_log_@@D0001@@.txt,D:\unyolog\@@SVRNL@@\log\cic
-M,F,D:\IWCICv5\Server\Logs,ServerAggregateStats-Trace.log.*,D:\unyolog\@@SVRNL@@\log\cic
-M,F,D:\IWCICv5\Server\Logs,ServerAggregateStats-Error.log.*,D:\unyolog\@@SVRNL@@\log\cic
-M,F,D:\IWCICv5\Server\Logs,ServerQueue-Trace.log.*,D:\unyolog\@@SVRNL@@\log\cic
-M,F,D:\IWCICv5\Server\Logs,ServerQueue-Error.log.*,D:\unyolog\@@SVRNL@@\log\cic
-M,F,D:\IWCICv5\Server\Logs,ServerUser-Trace.log.*,D:\unyolog\@@SVRNL@@\log\cic
-M,F,D:\IWCICv5\Server\Logs,ServerUser-Error.log.*,D:\unyolog\@@SVRNL@@\log\cic
-M,F,D:\IWCICv5\Server\Logs,StatisticService-Trace.log.*,D:\unyolog\@@SVRNL@@\log\cic
-M,F,D:\IWCICv5\Server\Logs,StatisticService-Error.log.*,D:\unyolog\@@SVRNL@@\log\cic
+M,F,D:\IW_CIC\logs,ServerAggregateStats-Trace.log.*,D:\unyolog\@@SVRNL@@\log\cic\@@D0001@@
+M,F,D:\IW_CIC\logs,ServerAggregateStats-Error.log.*,D:\unyolog\@@SVRNL@@\log\cic\@@D0001@@
+M,F,D:\IW_CIC\logs,ServerQueue-Trace.log.*,D:\unyolog\@@SVRNL@@\log\cic\@@D0001@@
+M,F,D:\IW_CIC\logs,ServerQueue-Error.log.*,D:\unyolog\@@SVRNL@@\log\cic\@@D0001@@
+M,F,D:\IW_CIC\logs,ServerUser-Trace.log.*,D:\unyolog\@@SVRNL@@\log\cic\@@D0001@@
+M,F,D:\IW_CIC\logs,ServerUser-Error.log.*,D:\unyolog\@@SVRNL@@\log\cic\@@D0001@@
+M,F,D:\IW_CIC\logs,StatisticService-Trace.log.*,D:\unyolog\@@SVRNL@@\log\cic\@@D0001@@
+M,F,D:\IW_CIC\logs,StatisticService-Error.log.*,D:\unyolog\@@SVRNL@@\log\cic\@@D0001@@
