--- a/trunk/unyo_音声基盤/Deploy/replacefile/fcctbsrppw/shell/def/DELETE_LOG_DEF_RP.cfg
+++ b/trunk/unyo_音声基盤/Deploy/replacefile/fcctbsrppw/shell/def/DELETE_LOG_DEF_RP.cfg
@@ -6,18 +6,19 @@
 #-----------------------------------------------------------------------------------------------------------------------
 F,D:\logfile\unyo\azbk\actlog,*.ps1.log.*,10
 #F,D:\unyolog\@@SVRNL@@\log\cic,IW_SVC_log_????????.txt,30
-F,D:\unyolog\@@SVRNL@@\log\cic,ServerAggregateStats-Trace.log.*,30
-F,D:\unyolog\@@SVRNL@@\log\cic,ServerAggregateStats-Error.log.*,30
-F,D:\unyolog\@@SVRNL@@\log\cic,ServerQueue-Trace.log.*,30
-F,D:\unyolog\@@SVRNL@@\log\cic,ServerQueue-Error.log.*,30
-F,D:\unyolog\@@SVRNL@@\log\cic,ServerUser-Trace.log.*,30
-F,D:\unyolog\@@SVRNL@@\log\cic,ServerUser-Error.log.*,30
-F,D:\unyolog\@@SVRNL@@\log\cic,StatisticService-Trace.log.*,30
-F,D:\unyolog\@@SVRNL@@\log\cic,StatisticService-Error.log.*,30
+#F,D:\unyolog\@@SVRNL@@\log\cic,ServerAggregateStats-Trace.log.*,30
+#F,D:\unyolog\@@SVRNL@@\log\cic,ServerAggregateStats-Error.log.*,30
+#F,D:\unyolog\@@SVRNL@@\log\cic,ServerQueue-Trace.log.*,30
+#F,D:\unyolog\@@SVRNL@@\log\cic,ServerQueue-Error.log.*,30
+#F,D:\unyolog\@@SVRNL@@\log\cic,ServerUser-Trace.log.*,30
+#F,D:\unyolog\@@SVRNL@@\log\cic,ServerUser-Error.log.*,30
+#F,D:\unyolog\@@SVRNL@@\log\cic,StatisticService-Trace.log.*,30
+#F,D:\unyolog\@@SVRNL@@\log\cic,StatisticService-Error.log.*,30
+D,D:\unyolog\@@SVRNL@@\log\cic,????????,30
 
 # MSSQL
-F,D:\Product\MICROS~1\PROGRA~1\MICROS~1\MSSQL11.MSSQLSERVER\MSSQL\Log,ERRORLOG.*,30
-F,D:\Product\MICROS~1\PROGRA~1\MICROS~1\MSSQL11.MSSQLSERVER\MSSQL\Log,*.trc,30
+F,D:\Product\Microsoft SQL Server\Program Files\Microsoft SQL Server\MSSQL13.MSSQLSERVER\MSSQL\Log,ERRORLOG.*,30
+F,D:\Product\Microsoft SQL Server\Program Files\Microsoft SQL Server\MSSQL13.MSSQLSERVER\MSSQL\Log,*.trc,30
 #-----------------------------------------------------------------------------------------------------------------------
 # 運用バッチログ
 #-----------------------------------------------------------------------------------------------------------------------
@@ -32,14 +33,15 @@ F,D:\unyolog\@@SVRNL@@\log\event,event_apl.log.????????,30
 # NAS保管
 #-----------------------------------------------------------------------------------------------------------------------
 #F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,IW_SVC_log_????????.txt,90
-F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerAggregateStats-Trace.log.*,90
-F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerAggregateStats-Error.log.*,90
-F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerQueue-Trace.log.*,90
-F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerQueue-Error.log.*,90
-F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerUser-Trace.log.*,90
-F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerUser-Error.log.*,90
-F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,StatisticService-Trace.log.*,90
-F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,StatisticService-Error.log.*,90
+#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerAggregateStats-Trace.log.*,90
+#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerAggregateStats-Error.log.*,90
+#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerQueue-Trace.log.*,90
+#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerQueue-Error.log.*,90
+#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerUser-Trace.log.*,90
+#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,ServerUser-Error.log.*,90
+#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,StatisticService-Trace.log.*,90
+#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,StatisticService-Error.log.*,90
+D,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\cic,????????,90
 
 # Event Log
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event,event_sec.log.????????,3650
