--- a/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_DB.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 不要ファイル削除定義 ( Version 1.12 : 2018/07/06 : Update ISID-IT K.Takeichi )
+# 不要ファイル削除定義 ( Version 1.13 : 2022/02/02 : Update ISID-IT S.Ishihara )
 #-----------------------------------------------------------------------------------------------------------------------
 # DELETE_LOG_DEF.cfg  (DBサーバ用)
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
@@ -74,9 +74,9 @@ F,${UNYO_DB_EXTRCV_DIR}\backup,M_*.dat.*,31
 # 週次受信ファイル 10日保管(1世代分)
 F,${UNYO_DB_EXTRCV_DIR}\backup,W_*.dat.*,10
 # 日次受信ファイル 10日保管
-F,${UNYO_DB_EXTRCV_DIR}\backup,D_*.dat.*,10
+F,${UNYO_DB_EXTRCV_DIR}\backup,D_*.dat.*,5
 # 日次送信ファイル 10日保管
-F,${UNYO_DB_EXTSND_DIR}\backup,S_*.dat.*,10
+F,${UNYO_DB_EXTSND_DIR}\backup,S_*.dat.*,5
 #-----------------------------------------------------------------------------------------------------------------------
 # パフォーマンス情報ログ削除
 #-----------------------------------------------------------------------------------------------------------------------
