【アプリ基盤更改】運用バッチ 本番ログメンテナンス設定ファイル
git-svn-id: http://10.16.14.243:13000/svn/azbBatch@201 2364f4dd-7815-ee4c-b9ea-42ae821c1292

--- a/trunk/unyo/shell/def/ForMaster/BACKUP_OTHER_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForMaster/BACKUP_OTHER_LOG_DEF_DB.cfg
@@ -9,24 +9,25 @@
 # For NAS Strage
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
-#C,F,D:\logfile\event,event_sys.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
-#C,F,D:\logfile\event,event_apl.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
 C,F,D:\logfile\event,event_sys.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
 C,F,D:\logfile\event,event_apl.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
+
 # UNYO Log
 C,F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\unyo
+
+
 #-----------------------------------------------------------------------------------------------------------------------
 # サービスノード用
 #-----------------------------------------------------------------------------------------------------------------------
-C,F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle
-#C,F,D:\unyolog\@@SVRNL@@\log\oracle,alert_bankrazb.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle
+C,F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\otherlog\oracle
+C,F,D:\unyolog\@@SVRNL@@\log\oracle,log.xml.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\otherlog\oracle
+
+
 #-----------------------------------------------------------------------------------------------------------------------
 # 2.Move
 #-----------------------------------------------------------------------------------------------------------------------
 # For Local Backup
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
-#M,F,D:\logfile\event,event_sys.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\event\
-#M,F,D:\logfile\event,event_apl.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\event\
 M,F,D:\logfile\event,event_sys.log.*,D:\unyolog\@@SVRNL@@\log\event\
 M,F,D:\logfile\event,event_apl.log.*,D:\unyolog\@@SVRNL@@\log\event\
