--- a/trunk/unyo/shell/def/ForMaster/RENAME_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForMaster/RENAME_LOG_DEF_DB.cfg
@@ -8,11 +8,18 @@
 #-----------------------------------------------------------------------------------------------------------------------
 # 運用バッチログ
 #-----------------------------------------------------------------------------------------------------------------------
-CLF,D:\logfile\unyo\azbk\,error.log,D:\unyolog\@@SVRNL@@\log\unyo
+CLF,D:\logfile\unyo\azbk\,error.log, D:\unyolog\@@SVRNL@@\log\unyo
+
+
 #-----------------------------------------------------------------------------------------------------------------------
 # DBサービスノード用定義
 #-----------------------------------------------------------------------------------------------------------------------
 # Oracle 本番インスタンス
-CLF,E:\CLlog\oracle\Fslfcctbsdbpw01\diag\tnslsnr\@@SVRNL@@\fslfcctbsdbpw01\trace,fslfcctbsdbpw01.log,D:\unyolog\@@SVRNL@@\audit\listener
+# リスナーログ
+CLF,E:\CLlog\oracle\brccazbk_listener\diag\tnslsnr\@@SVRNL@@\brccazbk\trace,brccazbk.log,D:\unyolog\@@SVRNL@@\audit\listener
+
+# アラートログ（テキスト形式）
 CLF,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,alert_brccazbk.log,D:\unyolog\@@SVRNL@@\log\oracle
-#CLF,E:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,alert_bankrazb.log,D:\unyolog\@@SVRNL@@\log\oracle
+
+# アラートログ（XML形式）
+CLF,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\alert,log.xml,D:\unyolog\@@SVRNL@@\log\oracle
