--- a/trunk/unyo/shell/def/ForMaster/BACKUP_AUDIT_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForMaster/BACKUP_AUDIT_LOG_DEF_DB.cfg
@@ -9,32 +9,32 @@
 # For NAS Strage
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
-#C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event
 C,F,D:\logfile\event,event_sec.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event
+
+
 #-----------------------------------------------------------------------------------------------------------------------
 # サービスノード用
 #-----------------------------------------------------------------------------------------------------------------------
-# Oracle 0.5次
-#C,F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbpw01.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\listener
-#C,F,E:\CLlog\azbk\BANKR\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\opelog
-#C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\oracle\@@D0001@@
-#C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
-#C,F,E:\CLlog\azbk\BANKR\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\errors
-# Oracle 1.0次
-#C,F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbpw01.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\listener
-#C,F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\opelog
-#C,F,H:\DBFiles\bankrazb\adump,bankrazb_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\oracle\@@D0001@@
-#C,F,H:\DBFiles\bankrazb\adump,bankrazb_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
-#C,F,E:\CLlog\azbk\BANKRAZB\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\errors
 # Oracle 1.0次 クラスタ対応
-C,F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbpw01.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\listener
-C,F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\opelog
-C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\oracle\@@D0001@@
+# Oracleリスナーログ
+C,F,D:\unyolog\@@SVRNL@@\audit\listener,brccazbk.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\audit\listener
+C,F,D:\unyolog\@@SVRNL@@\audit\listener,brcctrng.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\audit\listener
+
+# BANKR操作履歴ダンプファイル
+C,F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\audit\opelog
+
+# Oracle監査ログ
+C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\audit\oracle\@@D0001@@
 C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
-C,F,E:\CLlog\azbk\BANKRAZB\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\errors
+C,F,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@,brccazbk_*.zip,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\audit\oracle\@@D0001@@
+C,F,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@,brccazbk_*.zip,${COM_NAS_BASE_DIRS}\isidg68626\log\audit\oracle\@@D0001@@
+
+# BANKR 業務バッチログ
+C,F,E:\CLlog\azbk\BANKRAZB\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\audit\errors
+
+
 #-----------------------------------------------------------------------------------------------------------------------
 # 2.Move
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
-#M,F,D:\logfile\event,event_sec.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\event
 M,F,D:\logfile\event,event_sec.log.*,D:\unyolog\@@SVRNL@@\audit\event
