--- a/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_AP.cfg
@@ -4,110 +4,97 @@
 # DELETE_LOG_DEF.cfg  (APサーバ用)
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
 #-----------------------------------------------------------------------------------------------------------------------
+#-------------------------
+# 運用バッチログ、イベントログ
+#-------------------------
 F,D:\logfile\unyo\azbk\actlog,*.log.*,30
 F,D:\unyolog\@@SVRNL@@\audit\event,event_sec.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\event,event_sys.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\event,event_apl.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.????????,30
+
+
 #-------------------------
-#F,D:\unyolog\@@SVRNL@@\audit\IHS\azbk,access.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\audit\IHS\trng,access.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\log\IHS\azbk,error.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\log\IHS\trng,error.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\audit\brcc\azbk,eMBTraceFile.????????,30
-#F,D:\unyolog\@@SVRNL@@\audit\brcc\azbk,eMBPerformanceFile.????????,30
-#F,D:\unyolog\@@SVRNL@@\audit\brcc\trng,eMBTraceFile.????????,30
-#F,D:\unyolog\@@SVRNL@@\audit\brcc\trng,eMBPerformanceFile.????????,30
+# IHSログ
 #-------------------------
 F,D:\unyolog\@@SVRNL@@\audit\ihs\bankrazb,access.log.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\ihs\bankrtrn,access.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\ihs\bankrazb,error.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\ihs\bankrtrn,error.log.????????,30
+
+
+#-------------------------
+# BANKR トレースログバックアップ
+#-------------------------
 F,D:\unyolog\@@SVRNL@@\audit\bankr\bankrazb,eMBTraceFile.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\bankr\bankrazb,eMBPerformanceFile.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\bankr\bankrtrn,eMBTraceFile.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\bankr\bankrtrn,eMBPerformanceFile.????????,30
+
 #-------------------------
-#F,D:\BANKR_CC\logs\ui\brccazbk,access.log.????-??-??,30
-#F,D:\BANKR_CC\logs\ui\brccazbk,error.log.????-??-??,30
-#F,D:\BANKR_CC\logs\ui\brccazbk,heap.log.????-??-??,30
-#F,D:\BANKR_CC\logs\ui\brccazbk,debug.log.????-??-??,30
-#F,D:\BANKR_CC\logs\ui\brccazbk,dump.log.????-??-??,30
+# BANKR ログ（本番）
 #-------------------------
 F,D:\BANKR_CC\logs\ui\bankrazb,access.log.????-??-??,30
 F,D:\BANKR_CC\logs\ui\bankrazb,error.log.????-??-??,30
 F,D:\BANKR_CC\logs\ui\bankrazb,heap.log.????-??-??,30
 F,D:\BANKR_CC\logs\ui\bankrazb,debug.log.????-??-??,30
 F,D:\BANKR_CC\logs\ui\bankrazb,dump.log.????-??-??,30
+
+
 #-------------------------
-#F,D:\BANKR_CC\logs\ui\brcctrng,access.log.????-??-??,30
-#F,D:\BANKR_CC\logs\ui\brcctrng,error.log.????-??-??,30
-#F,D:\BANKR_CC\logs\ui\brcctrng,heap.log.????-??-??,30
-#F,D:\BANKR_CC\logs\ui\brcctrng,debug.log.????-??-??,30
-#F,D:\BANKR_CC\logs\ui\brcctrng,dump.log.????-??-??,30
+# BANKR ログ（研修）
 #-------------------------
 F,D:\BANKR_CC\logs\ui\bankrtrn,access.log.????-??-??,30
 F,D:\BANKR_CC\logs\ui\bankrtrn,error.log.????-??-??,30
 F,D:\BANKR_CC\logs\ui\bankrtrn,heap.log.????-??-??,30
 F,D:\BANKR_CC\logs\ui\bankrtrn,debug.log.????-??-??,30
 F,D:\BANKR_CC\logs\ui\bankrtrn,dump.log.????-??-??,30
+
+
 #-------------------------
-#F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,access.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,error.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,heap.log.*,30
-#F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,debug.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,dump.log.????????,30
+# BANKR ログ バックアップ（本番）
 #-------------------------
 F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,access.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,error.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,heap.log.*,30
 F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,debug.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,dump.log.????????,30
+
+
 #-------------------------
-#F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,access.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,error.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,heap.log.*,30
-#F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,debug.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,dump.log.????????,30
+# BANKR ログ バックアップ（研修）
 #-------------------------
 F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,access.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,error.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,heap.log.*,30
 F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,debug.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,dump.log.????????,30
+
+
 #-------------------------
-#F,D:\unyolog\@@SVRNL@@\audit\was\azbk,trace.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\audit\was\azbk,activity.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\audit\was\azbk,SystemOut_*.log,30
-#F,D:\unyolog\@@SVRNL@@\audit\was\azbk,SystemErr_*.log,30
-##F,D:\unyolog\@@SVRNL@@\audit\was\azbk,native_stdout.log.????????,30
-##F,D:\unyolog\@@SVRNL@@\audit\was\azbk,native_stderr.log.????????,30
+# WASログ バックアップ（本番）
 #-------------------------
 F,D:\unyolog\@@SVRNL@@\audit\was\bankrazb,trace.log.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\was\bankrazb,activity.log.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\was\bankrazb,SystemOut_*.log,30
 F,D:\unyolog\@@SVRNL@@\audit\was\bankrazb,SystemErr_*.log,30
+
+
 #-------------------------
-#F,D:\unyolog\@@SVRNL@@\audit\was\trng,trace_tr.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\audit\was\trng,activity_tr.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\audit\was\trng,SystemOut_tr_*.log,30
-#F,D:\unyolog\@@SVRNL@@\audit\was\trng,SystemErr_tr_*.log,30
-##F,D:\unyolog\@@SVRNL@@\audit\was\trng,native_stdout_tr.log.????????,30
-##F,D:\unyolog\@@SVRNL@@\audit\was\trng,native_stderr_tr.log.????????,30
+# WASログ バックアップ（研修）
 #-------------------------
 F,D:\unyolog\@@SVRNL@@\audit\was\bankrtrn,trace_tr.log.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\was\bankrtrn,activity_tr.log.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\was\bankrtrn,SystemOut_tr_*.log,30
 F,D:\unyolog\@@SVRNL@@\audit\was\bankrtrn,SystemErr_tr_*.log,30
+
+
 #-------------------------
 F,D:\logfile\unyo\azbk\actlog,*.ps1.log.*,10
-#F,D:\logfile\WAS\brccazbk,SystemOut_*.log,30
-#F,D:\logfile\WAS\brccazbk,SystemErr_*.log,30
-#F,D:\logfile\WAS\brcctrng,SystemOut_tr_*.log,30
-#F,D:\logfile\WAS\brcctrng,SystemErr_tr_*.log,30
 #-------------------------
 F,D:\BANKR_CC\image\brtabazb\reference,*.*,0
 F,D:\BANKR_CC\image\brtabtrn\reference,*.*,0
+
 #-----------------------------------------------------------------------------------------------------------------------
 # NAS保管
 #-----------------------------------------------------------------------------------------------------------------------
@@ -115,18 +102,12 @@ F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event,event_sec.log.????????,3650
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event,event_sys.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event,event_apl.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\unyo,error.log.????????,90
+
 #-------------------------
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\azbk,access.log.????????,3650
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\trng,access.log.????????,3650
 #-------------------------
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\bankrazb,access.log.????????,3650
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\bankrazb,access.log.????????,3650
 #-------------------------
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk,access.log.????????,90
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk,error.log.????????,90
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk,heap.log.*,90
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk,debug.log.????????,90
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk,dump.log.????????,90
 #-------------------------
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb,access.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb,error.log.????????,90
@@ -134,48 +115,37 @@ F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb,heap.log.*,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb,debug.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb,dump.log.????????,90
 #-------------------------
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng,access.log.????????,90
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng,error.log.????????,90
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng,heap.log.*,90
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng,debug.log.????????,90
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng,dump.log.????????,90
 #-------------------------
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn,access.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn,error.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn,heap.log.*,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn,debug.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn,dump.log.????????,90
+
+
 #-------------------------
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\ihs\azbk,error.log.????????,90
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\ihs\trng,error.log.????????,90
 #-------------------------
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\ihs\bankrazb,error.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\ihs\bankrtrn,error.log.????????,90
+
+
 #-------------------------
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\azbk,eMBTraceFile.????????,90
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\azbk,eMBPerformanceFile.????????,90
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\trng,eMBTraceFile.????????,90
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\trng,eMBPerformanceFile.????????,90
 #-------------------------
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\bankr\bankrazb,eMBTraceFile.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\bankr\bankrazb,eMBPerformanceFile.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\bankr\bankrtrn,eMBTraceFile.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\bankr\bankrtrn,eMBPerformanceFile.????????,90
+
+
 #-------------------------
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\azbk,trace.log.????????,3650
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\azbk,activity.log.????????,3650
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\azbk,SystemOut_*.log,3650
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\azbk,SystemErr_*.log,3650
 #-------------------------
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrazb,trace.log.????????,3650
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrazb,activity.log.????????,3650
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrazb,SystemOut_*.log,3650
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrazb,SystemErr_*.log,3650
+
+
 #-------------------------
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\trng,trace_tr.log.????????,3650
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\trng,activity_tr.log.????????,3650
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\trng,SystemOut_tr_*.log,3650
-#F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\trng,SystemErr_tr_*.log,3650
 #-------------------------
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrtrn,trace_tr.log.????????,3650
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrtrn,activity_tr.log.????????,3650
