--- a/trunk/unyo/shell/def/ForShinaDev/DELETE_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForShinaDev/DELETE_LOG_DEF_DB.cfg
@@ -1,41 +1,51 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 不要ファイル削除定義 ( Version 1.13 : 2022/02/02 : Update ISID-IT S.Ishihara )
+# 不要ファイル削除定義 ( Version 1.13 : 2023/06/28 : Update ISID-IT K.Doi )
 #-----------------------------------------------------------------------------------------------------------------------
 # DELETE_LOG_DEF.cfg  (社内DBサーバ用)
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
 #-----------------------------------------------------------------------------------------------------------------------
 # 運用バッチログ
 #-----------------------------------------------------------------------------------------------------------------------
-F,D:\logfile\unyo\azbk\actlog,*.ps1.log.*,10
-F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.????????,30
+F,D:\logfile\unyo\azbk\actlog, *.ps1.log.*,10
+F,D:\unyolog\@@SVRNL@@\log\unyo, error.log.????????,30
+
+
 #-----------------------------------------------------------------------------------------------------------------------
 # イベントログ
 #-----------------------------------------------------------------------------------------------------------------------
 F,D:\unyolog\@@SVRNL@@\audit\event,event_sec.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\event,event_sys.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\event,event_apl.log.????????,30
-#-----------------------------------------------------------------------------------------------------------------------
-# 監査ログ 1.0次
-#-----------------------------------------------------------------------------------------------------------------------
-#F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbpw01.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
-#D,D:\unyolog\@@SVRNL@@\audit\oracle,????????,30
-#F,D:\unyolog\@@SVRNL@@\log\oracle,alert_bankrazb.log.????????,10
-#F,D:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,bankrazb_arc*.*,30
-#F,D:\DBFiles\bankrazb\adump,bankrazb_*.xml,3
-#F,D:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,30
-#F,D:\CLlog\azbk\BANKRAZB\error,err.*,30
+
+
 #-----------------------------------------------------------------------------------------------------------------------
 # 監査ログ 1.0次 クラスタ対応
 #-----------------------------------------------------------------------------------------------------------------------
-F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbpw01.log.????????,30
+# Oracleリスナーログ
+F,D:\unyolog\@@SVRNL@@\audit\listener,azbk_lsnr.log.????????,30
+
+# BANKRバッチログ
 F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
-D,D:\unyolog\@@SVRNL@@\audit\oracle,????????,30
-F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.????????,10
-F,D:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,brccazbk_arc*.*,30
+
+# Oracle監査ログ
+D,D:\unyolog\@@SVRNL@@\audit\oracle, ????????,30
+
+# Oracleアラートログ
+F,D:\unyolog\@@SVRNL@@\log\oracle, alert_brccazbk.log.????????,10
+
+# Oracleトレースログ
+F,D:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace, brccazbk_arc*.*,30
+
+# Oracle監査ログ
 F,D:\DBFiles\brccazbk\adump,brccazbk_*.xml,3
+
+# BANKR操作履歴ダンプファイル
 F,D:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,30
+
+# BANKR業務バッチログ
 F,D:\CLlog\azbk\BANKRAZB\error,err.*,30
+
+
 #-----------------------------------------------------------------------------------------------------------------------
 # NAS保管
 #-----------------------------------------------------------------------------------------------------------------------
@@ -43,26 +53,43 @@ F,D:\CLlog\azbk\BANKRAZB\error,err.*,30
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event,event_sec.log.????????,3650
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event,event_sys.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event,event_apl.log.????????,90
+
 # 運用ログ
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\unyo,error.log.????????,90
-# サービスノード設定
-F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\listener,fslfcctbsdbpw01.log.????????,3650
-D,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\oracle,????????,3650
-F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\errors,err.*,3650
-F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\opelog,ope_history.dump.????????,3650
-#F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle,alert_bankrazb.log.????????,90
-F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle,alert_brccazbk.log.????????,90
+
+# Oracleリスナーログ
+F,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\audit\listener,azbk_lsn.log.????????,3650
+
+# Oracle監査ログ
+D,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\audit\oracle,????????,3650
+
+# BANKRバッチログ
+F,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\audit\errors,err.*,3650
+
+
+# BANKR操作履歴ダンプファイル
+F,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\audit\opelog,ope_history.dump.????????,3650
+
+# Oracleアラートログ
+F,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\otherlog\oracle,alert_brccazbk.log.????????,90
+
+
 #-----------------------------------------------------------------------------------------------------------------------
 # 送受信データ バックアップファイル
 #-----------------------------------------------------------------------------------------------------------------------
 # 月次受信ファイル 31日保管(1世代分)
-F,${UNYO_DB_EXTRCV_DIR}\backup,M_*.dat.*,31
+F,${UNYO_DB_EXTRCV_DIR}\backup, M_*.dat.*, 31
+
 # 週次受信ファイル 10日保管(1世代分)
 F,${UNYO_DB_EXTRCV_DIR}\backup,W_*.dat.*,10
-# 日次受信ファイル 10日保管
+
+# 日次受信ファイル 5日保管
 F,${UNYO_DB_EXTRCV_DIR}\backup,D_*.dat.*,5
-# 日次送信ファイル 10日保管
+
+# 日次送信ファイル 5日保管
 F,${UNYO_DB_EXTSND_DIR}\backup,S_*.dat.*,5
+
+
 #-----------------------------------------------------------------------------------------------------------------------
 # パフォーマンス情報ログ削除
 #-----------------------------------------------------------------------------------------------------------------------
