--- a/trunk/unyo/shell/def/ForShinaDev/RENAME_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForShinaDev/RENAME_LOG_DEF_DB.cfg
@@ -9,10 +9,10 @@
 # 運用バッチログ
 #-----------------------------------------------------------------------------------------------------------------------
 CLF,D:\logfile\unyo\azbk\,error.log,D:\unyolog\@@SVRNL@@\log\unyo
+
 #-----------------------------------------------------------------------------------------------------------------------
 # DBサービスノード用定義
 #-----------------------------------------------------------------------------------------------------------------------
 # Oracle 本番インスタンス (社内環境用)
-CLF,D:\CLlog\oracle\Fslfcctbsdbpw01\diag\tnslsnr\@@SVRNL@@\fslfcctbsdbpw01\trace,brccazbk_lsnr.log,D:\unyolog\@@SVRNL@@\audit\listener
-#CLF,D:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,alert_bankrazb.log,D:\unyolog\@@SVRNL@@\log\oracle
+CLF,D:\CLlog\oracle\brccazbk_listener\diag\tnslsnr\@@SVRNL@@\azbk_lsnr\trace,azbk_lsnr.log,D:\unyolog\@@SVRNL@@\audit\listener
 CLF,D:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,alert_brccazbk.log,D:\unyolog\@@SVRNL@@\log\oracle
