--- a/trunk/unyo/shell/def/ForDevelopers/BACKUP_OTHER_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/BACKUP_OTHER_LOG_DEF_DB.cfg
@@ -1,7 +1,7 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 各種ログバックアップ定義 ( Version 1.11 : 2015/11/11 : Update ISID R.YAMANO )
+# 各種ログバックアップ定義 ( Version 1.0 : 2023/07/08 : Update ISID K.DOI )
 #-----------------------------------------------------------------------------------------------------------------------
-# BACKUP_OTHER_LOG_DEF.cfg (監査ログを除く各種ログ) (DBサーバ用) 開発用
+# BACKUP_OTHER_LOG_DEF.cfg (監査ログを除く各種ログ) (社内DBサーバ用)
 # バックアップ種別,対象区分,対象上位ディレクトリ,対象ディレクトリ/ファイル,保管先ディレクトリ
 #-----------------------------------------------------------------------------------------------------------------------
 # 1.Copy
@@ -11,13 +11,16 @@
 # Event Log
 C,F,D:\logfile\event,event_sys.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
 C,F,D:\logfile\event,event_apl.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
+
 # UNYO Log
 C,F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\unyo
+
 #-----------------------------------------------------------------------------------------------------------------------
 # サービスノード用
 #-----------------------------------------------------------------------------------------------------------------------
-C,F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle
-#C,F,D:\unyolog\@@SVRNL@@\log\oracle,alert_bankrazb.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle
+C,F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw11\log\otherlog\oracle
+
+
 #-----------------------------------------------------------------------------------------------------------------------
 # 2.Move
 #-----------------------------------------------------------------------------------------------------------------------
