--- a/trunk/unyo/shell/def/ForDevelopers/BACKUP_AUDIT_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/BACKUP_AUDIT_LOG_DEF_DB.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 監査ログバックアップ定義 ( Version 1.11 : 2015/11/11 : Update ISID R.YAMANO )
+# 監査ログバックアップ定義 ( Version 1.2 : 2023/06/23 : Update ISID K.DOI )
 #-----------------------------------------------------------------------------------------------------------------------
 # BACKUP_AUDIT_DEF.cfg (監査ログバックアップ) (DBサーバ用) 開発用
 # バックアップ種別,対象区分,対象上位ディレクトリ,対象ディレクトリ/ファイル,保管先ディレクトリ
@@ -10,27 +10,16 @@
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
 C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event
+
 #-----------------------------------------------------------------------------------------------------------------------
 # サービスノード用
 #-----------------------------------------------------------------------------------------------------------------------
-# Oracle 0.5次 開発
-#C,F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbdw01.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener
-#C,F,E:\CLlog\azbk\BANKR\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\opelog
-#C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\oracle\@@D0001@@
-#C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
-#C,F,E:\CLlog\azbk\BANKR\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\errors
-# Oracle 1.0次 開発
-#C,F,D:\unyolog\@@SVRNL@@\audit\listener,bankrazb_lsnr.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener
-#C,F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\opelog
-#C,F,H:\DBFiles\bankrazb\adump,bankrazb_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\oracle\@@D0001@@
-#C,F,H:\DBFiles\bankrazb\adump,bankrazb_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
-#C,F,E:\CLlog\azbk\BANKRAZB\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\errors
 # Oracle 1.0次 クラスタ対応
-C,F,D:\unyolog\@@SVRNL@@\audit\listener,azbk_lsnr.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener
-C,F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\opelog
-C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\oracle\@@D0001@@
-C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
-C,F,E:\CLlog\azbk\BANKRAZB\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\errors
+C,F,D:\unyolog\@@SVRNL@@\audit\listener,azbk_lsnr.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw11\log\audit\listener
+C,F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbdw11\log\audit\opelog
+C,F,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@,brccazbk_*.zip,${COM_NAS_BASE_DIRS}\fcctbsdbdw11\log\audit\oracle\@@D0001@@
+C,F,E:\CLlog\azbk\BANKRAZB\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw11\log\audit\errors
+
 #-----------------------------------------------------------------------------------------------------------------------
 # 2.Move
 #-----------------------------------------------------------------------------------------------------------------------
