--- a/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_DB.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 不要ファイル削除定義 ( Version 1.13 : 2022/02/02 : Update ISID-IT S.Ishihara )
+# 不要ファイル削除定義 ( Version 1.13 : 2023/07/06 : Update ISID-IT K.Doi )
 #-----------------------------------------------------------------------------------------------------------------------
 # DELETE_LOG_DEF.cfg  (DBサーバ用)　開発用
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
@@ -8,34 +8,14 @@
 #-----------------------------------------------------------------------------------------------------------------------
 F,D:\logfile\unyo\azbk\actlog,*.ps1.log.*,10
 F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.????????,30
+
 #-----------------------------------------------------------------------------------------------------------------------
 # イベントログ
 #-----------------------------------------------------------------------------------------------------------------------
 F,D:\unyolog\@@SVRNL@@\audit\event,event_sec.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\event,event_sys.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\event,event_apl.log.????????,30
-#-----------------------------------------------------------------------------------------------------------------------
-# 監査ログ 0.5次 開発用
-#-----------------------------------------------------------------------------------------------------------------------
-#F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbdw01.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
-#D,D:\unyolog\@@SVRNL@@\audit\oracle,????????,30
-#F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.????????,10
-#F,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,brccazbk_arc*.*,30
-#F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,7
-#F,E:\CLlog\azbk\BANKR\audit\opelog,ope_history.dump.*,30
-#F,E:\CLlog\azbk\BANKR\error,err.*,30
-#-----------------------------------------------------------------------------------------------------------------------
-# 監査ログ 1.0次 開発用
-#-----------------------------------------------------------------------------------------------------------------------
-#F,D:\unyolog\@@SVRNL@@\audit\listener,bankrazb_lsnr.log.????????,30
-#F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
-#D,D:\unyolog\@@SVRNL@@\audit\oracle,????????,30
-#F,D:\unyolog\@@SVRNL@@\log\oracle,alert_bankrazb.log.????????,10
-#F,E:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,bankrazb_arc*.*,30
-#F,H:\DBFiles\bankrazb\adump,bankrazb_*.xml,7
-#F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,30
-#F,E:\CLlog\azbk\BANKRAZB\error,err.*,30
+
 #-----------------------------------------------------------------------------------------------------------------------
 # 監査ログ 1.0次 クラスタ対応 開発用
 #-----------------------------------------------------------------------------------------------------------------------
@@ -47,6 +27,7 @@ F,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,brccazbk_arc*.*,30
 F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,7
 F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,30
 F,E:\CLlog\azbk\BANKRAZB\error,err.*,30
+
 #-----------------------------------------------------------------------------------------------------------------------
 # NAS保管
 #-----------------------------------------------------------------------------------------------------------------------
@@ -54,29 +35,33 @@ F,E:\CLlog\azbk\BANKRAZB\error,err.*,30
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event,event_sec.log.????????,3650
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event,event_sys.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event,event_apl.log.????????,90
+
 # 運用ログ
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\unyo,error.log.????????,90
+
 # サービスノード設定 開発用
-F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener,azbk_lsnr.log.????????,3650
-#F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener,bankrazb_lsnr.log.????????,3650
-D,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\oracle,????????,3650
-F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\errors,err.*,3650
-F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\opelog,ope_history.dump.????????,3650
-F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle,alert_brccazbk.log.????????,90
-#F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle,alert_bankrazb.log.????????,90
-#F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\hulft,*.log.????????,90
-#F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\BE,*.xml.????????,90
+F,${COM_NAS_BASE_DIRS}\fcctbsdbdw11\log\audit\listener,azbk_lsnr.log.????????,3650
+D,${COM_NAS_BASE_DIRS}\fcctbsdbdw11\log\audit\oracle,????????,3650
+F,${COM_NAS_BASE_DIRS}\fcctbsdbdw11\log\audit\errors,err.*,3650
+F,${COM_NAS_BASE_DIRS}\fcctbsdbdw11\log\audit\opelog,ope_history.dump.????????,3650
+F,${COM_NAS_BASE_DIRS}\fcctbsdbdw11\log\otherlog\oracle,alert_brccazbk.log.????????,90
+
 #-----------------------------------------------------------------------------------------------------------------------
 # 送受信データ バックアップファイル
 #-----------------------------------------------------------------------------------------------------------------------
 # 月次受信ファイル 31日保管(1世代分)
 F,${UNYO_DB_EXTRCV_DIR}\backup,M_*.dat.*,31
+
 # 週次受信ファイル 10日保管(1世代分)
 F,${UNYO_DB_EXTRCV_DIR}\backup,W_*.dat.*,10
+
 # 日次受信ファイル 10日保管
 F,${UNYO_DB_EXTRCV_DIR}\backup,D_*.dat.*,5
+
 # 日次送信ファイル 10日保管
 F,${UNYO_DB_EXTSND_DIR}\backup,S_*.dat.*,5
+
+
 #-----------------------------------------------------------------------------------------------------------------------
 # パフォーマンス情報ログ削除
 #-----------------------------------------------------------------------------------------------------------------------
