--- a/trunk/unyo/shell/def/ForDevelopers/RENAME_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/RENAME_LOG_DEF_AP.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# ログファイルリネーム定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
+# ログファイルリネーム定義 ( Version 1.0 : 2023/07/06 : Update ISID-IT K.DOI )
 #-----------------------------------------------------------------------------------------------------------------------
 # RENAME_LOG_DEF.cfg (APサーバ用)
 # クリア区分,リネーム元ディレクトリ,リネーム対象ファイル,リネーム先ディレクトリ
@@ -9,17 +9,10 @@
 # 運用バッチログ
 #-----------------------------------------------------------------------------------------------------------------------
 CLF,D:\logfile\unyo\azbk\,error.log,D:\unyolog\@@SVRNL@@\log\unyo
+
 #-----------------------------------------------------------------------------------------------------------------------
 # BANKR トレースログ
 #-----------------------------------------------------------------------------------------------------------------------
-# 本番インスタンス 0.5次
-#CLF,D:\BANKR_CC\logs\biz\brccazbk\,eMBTraceFile,D:\unyolog\@@SVRNL@@\audit\brcc\azbk
-#CLF,D:\BANKR_CC\logs\biz\brccazbk\,eMBPerformanceFile,D:\unyolog\@@SVRNL@@\audit\brcc\azbk
-#NON,D:\BANKR_CC\logs\ui\brccazbk,access.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk
-#NON,D:\BANKR_CC\logs\ui\brccazbk,error.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk
-#NON,D:\BANKR_CC\logs\ui\brccazbk,heap.log.@@D0003@@,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk
-#NON,D:\BANKR_CC\logs\ui\brccazbk,debug.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk
-#NON,D:\BANKR_CC\logs\ui\brccazbk,dump.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk
 # 本番インスタンス 1.0次
 CLF,D:\BANKR_CC\logs\biz\bankrazb\,eMBTraceFile,D:\unyolog\@@SVRNL@@\audit\bankr\bankrazb
 CLF,D:\BANKR_CC\logs\biz\bankrazb\,eMBPerformanceFile,D:\unyolog\@@SVRNL@@\audit\bankr\bankrazb
@@ -28,14 +21,7 @@ NON,D:\BANKR_CC\logs\ui\bankrazb,error.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\ban
 NON,D:\BANKR_CC\logs\ui\bankrazb,heap.log.@@D0003@@,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb
 NON,D:\BANKR_CC\logs\ui\bankrazb,debug.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb
 NON,D:\BANKR_CC\logs\ui\bankrazb,dump.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb
-# 研修インスタンス 0.5次
-#CLF,D:\BANKR_CC\logs\biz\brcctrng\,eMBTraceFile,D:\unyolog\@@SVRNL@@\audit\brcc\trng
-#CLF,D:\BANKR_CC\logs\biz\brcctrng\,eMBPerformanceFile,D:\unyolog\@@SVRNL@@\audit\brcc\trng
-#NON,D:\BANKR_CC\logs\ui\brcctrng,access.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng
-#NON,D:\BANKR_CC\logs\ui\brcctrng,error.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng
-#NON,D:\BANKR_CC\logs\ui\brcctrng,heap.log.@@D0003@@,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng
-#NON,D:\BANKR_CC\logs\ui\brcctrng,debug.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng
-#NON,D:\BANKR_CC\logs\ui\brcctrng,dump.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng
+
 # 研修インスタンス 1.0次
 CLF,D:\BANKR_CC\logs\biz\bankrtrn\,eMBTraceFile,D:\unyolog\@@SVRNL@@\audit\bankr\bankrtrn
 CLF,D:\BANKR_CC\logs\biz\bankrtrn\,eMBPerformanceFile,D:\unyolog\@@SVRNL@@\audit\bankr\bankrtrn
@@ -44,18 +30,15 @@ NON,D:\BANKR_CC\logs\ui\brcctrng,error.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\ban
 NON,D:\BANKR_CC\logs\ui\brcctrng,heap.log.@@D0003@@,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn
 NON,D:\BANKR_CC\logs\ui\brcctrng,debug.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn
 NON,D:\BANKR_CC\logs\ui\brcctrng,dump.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn
+
+
 #-----------------------------------------------------------------------------------------------------------------------
 # WAS 
 #-----------------------------------------------------------------------------------------------------------------------
-# 本番インスタンス 0.5次
-#CLF,D:\logfile\WAS\brccazbk\,trace.log,D:\unyolog\@@SVRNL@@\audit\was\azbk
-#CLF,D:\logfile\WAS\brccazbk\,activity.log,D:\unyolog\@@SVRNL@@\audit\was\azbk
 # 本番インスタンス 1.0次
 CLF,D:\logfile\WAS\bankrazb\,trace.log,D:\unyolog\@@SVRNL@@\audit\was\bankrazb
 CLF,D:\logfile\WAS\bankrazb\,activity.log,D:\unyolog\@@SVRNL@@\audit\was\bankrazb
-# 研修インスタンス 0.5次
-#CLF,D:\logfile\WAS\brcctrng\,trace_tr.log,D:\unyolog\@@SVRNL@@\audit\was\trng
-#CLF,D:\logfile\WAS\brcctrng\,activity_tr.log,D:\unyolog\@@SVRNL@@\audit\was\trng
+
 # 研修インスタンス 1.0次
 CLF,D:\logfile\WAS\bankrtrn\,trace_tr.log,D:\unyolog\@@SVRNL@@\audit\was\bankrtrn
 CLF,D:\logfile\WAS\bankrtrn\,activity_tr.log,D:\unyolog\@@SVRNL@@\audit\was\bankrtrn
